[package]
name = "rgs"
version = "0.1.0"
edition = "2024"

[dependencies]
curl = "0.4.47"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
urlencoding = "2.1.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
once_cell = "1.20.2"
colored = "2.1.0"
reqwest = "0.12.9"